--- a/team.yml
+++ b/team.yml
@@ -800,6 +800,14 @@ members:
       routes:
         - contact@bostonhacks.io
     status: active
+  - name: Celine Chen
+    github:
+      username: celinec1
+      role: member
+    mailgun:
+      email: cchen@bu.edu
+      routes:
+        - marketing@bostonhacks.io
 mailgun:
   routes:
     - name: contact@bostonhacks.io
